--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,8 @@ language: fi
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Kruunu ja okaita
 
   Romantillinen kertomus suomalais-venäläisestä sodasta 1808-1809'
